--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fruit</title>
-  <link href="https://cdn.jsdelivr.net/npm/daisyui@3.5.1/dist/full.css" rel="stylesheet" type="text/css" />
-  <script src="https://cdn.tailwindcss.com"></script>
+ <!-- tailwind and daisy ui cdn -->
+
+ <link href="https://cdn.jsdelivr.net/npm/daisyui@3.2.1/dist/full.css" rel="stylesheet" type="text/css" />
+ <script src="https://cdn.tailwindcss.com"></script>
+ 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
@@ -120,7 +123,7 @@
     
     
 
-      <div class="hidden md:hidden sm:block text-center  lg:relative lg:-translate-y-3/4 lg:mx-52">
+      <div class="hidden  sm:block text-center  lg:relative lg:-translate-y-3/4 lg:mx-52">
         <div class=" text-center flex flex-row  shadow-lg pb-8 carousel-center rounded-box bg-white px-20 ">
           <div class="carousel-item flex flex-col  py-5 px-6">
             <div><img src="images/fruit1.png" alt="" />
